--- a/icmake/changelog
+++ b/icmake/changelog
@@ -34,6 +34,8 @@ icmake (8.00.00)
     their resulting wasn't pushed on the stack when used in return statements,
     causing a stack underflow.
 
+  * Drive specifiers are not supported anymore
+
   * The internal code organization was significantly changed. Code belonging
     together is now collected in its own subdirectory, where the subdir-name
     is used as first part of the name of `public' functions (while their
