new builtin function 'eval', fixed missing p_notBoolean call in the parser

--- a/icmake/icm-comp/parser/inc/expression.5
+++ b/icmake/icm-comp/parser/inc/expression.5
@@ -317,7 +317,7 @@ expression:
         '!'
         expression
         {
-            $$ = *p_not(&$2);
+            $$ = *p_notBoolean(&$2);
         }
     |
         '('
