--- a/icmake/icm-comp/parser/inc/tokens.2
+++ b/icmake/icm-comp/parser/inc/tokens.2
@@ -16,6 +16,7 @@
     G_PATH
     ELEMENT
     ELSE
+    EVAL
     EXEC
     EXECUTE
     EXISTS
@@ -32,13 +33,13 @@
     IF
     INT
     LIST
+    LISTLEN
     MAKELIST
     M_ECHO
     NUMBER
     PRINTF
     PUTENV
     RETURN
-    SIZEOFLIST
     STAT
     STRING
     STRINGTYPE
