icmbuild compiles OK.     Also: fixed allocation problem with icm-comp, caused by allocating     a series of chars, but storing enum values, which are ints....

--- a/icmake/icm-comp/parser/inc/funcdef.5
+++ b/icmake/icm-comp/parser/inc/funcdef.5
@@ -1,7 +1,7 @@
     /*
         parameters are defined as local variables of the current function,
         while counting the number of parameters. 
-        At the end of a function definition head it's symtab nParams fields
+        At the end of a function definition head its symtab nParams fields
         holds the number of its parameters, which are represented by the
         initial nParams elements of symtab's local variables array.
     */
