--- a/icmake/icm-comp/parser/inc/function.5
+++ b/icmake/icm-comp/parser/inc/function.5
@@ -64,6 +64,8 @@ _two_arg_funs:
     FIELDS                              /* string, string */
 |
     STRFIND                              /* string, string */
+|
+    RESIZE                           /* string, int */
 ;
 
 _optint_string:
